Added Admin Feature

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container-fluid">
-    <nav>
+    <nav class="pull-left">
       <ul>
         <li>
           <a href="#">
@@ -19,9 +19,9 @@
         </li>
       </ul>
     </nav>
-    <div class="copyright">
+    <div class="copyright pull-right">
       &copy; {{curYear | date:"yyyy"}}, Developed by
-      <a href="http://www.qascentresearch.com" >QAscent Research Solutions Pvt. Ltd.</a>
+      <a href="http://www.qascentresearch.com" >QRS</a>
     </div>
   </div>
 </footer>
