--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -1,10 +1,10 @@
 <div class="wrapper">
-  <div class="sidebar" data-color="white" data-background-color="red" data-image="./assets/img/sidebar-1.jpg">
-    <app-sidebar></app-sidebar>
+  <div class="sidebar" data-color="purple" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+    <app-admin-sidebar></app-admin-sidebar>
     <div class="sidebar-background" style="background-image: url(assets/img/sidebar-1.jpg)"></div>
   </div>
   <div class="main-panel">
-    <app-navbar></app-navbar>
+    <app-admin-navbar></app-admin-navbar>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
   </div>
