--- a/src/app/admin/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin/admin-navbar/admin-navbar.component.html
@@ -1,4 +1,4 @@
-<nav #navbar class="navbar navbar-expand-lg navbar-transparent  navbar-absolute">
+<nav #navbar class="navbar navbar-expand-lg  bg-primary  navbar-absolute">
   <div class="container-fluid">
     <div class="navbar-wrapper">
       <div class="navbar-minimize">
@@ -58,7 +58,7 @@ padding: 10px;">
           </div>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="#pablo">
+          <a class="nav-link btn btn-danger btn-round btn-icon" href="#pablo" >
             <i class="material-icons">power_settings_new</i>
             <p>
               <span class="d-lg-none d-md-block">Logout</span>
