--- a/src/app/admin/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin/admin-navbar/admin-navbar.component.html
@@ -28,7 +28,7 @@
             <div class="ripple-container"></div>
           </button>
         </div>
-      </form> 
+      </form>
       <div style=" border-right: 1px solid black;
 padding: 10px;">
 <i class="material-icons">account_balance</i>  SiteName </div> -->
@@ -58,7 +58,7 @@ padding: 10px;">
           </div>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link btn btn-danger btn-round btn-icon" href="#pablo" >
+          <a class="nav-link btn btn-danger btn-round btn-icon" (click)="logout()" >
             <i class="material-icons">power_settings_new</i>
             <p>
               <span class="d-lg-none d-md-block">Logout</span>
