--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav #navbar class="navbar navbar-expand-lg navbar-transparent  navbar-absolute">
+<nav #navbar class="navbar navbar-expand-lg bg-primary  navbar-absolute">
     <div class="container-fluid">
       <div class="navbar-wrapper">
         <div class="navbar-minimize">
@@ -31,7 +31,7 @@
         </form> -->
         <div style=" border-right: 1px solid black;
   padding: 10px;">
-  <i class="material-icons">account_balance</i>  SiteName </div>
+  <i class="material-icons">account_balance</i>  {{siteName}} </div>
         <ul class="navbar-nav">
           <!-- <li class="nav-item">
             <a class="nav-link" href="#pablo">
@@ -58,7 +58,7 @@
             </div>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#pablo">
+            <a class="nav-link" (click)="logout()">
               <i class="material-icons">power_settings_new</i>
               <p>
                 <span class="d-lg-none d-md-block">Logout</span>
