--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -58,7 +58,7 @@
             </div>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" (click)="logout()">
+            <a href="#" class="nav-link" (click)="logout()" title="Logout">
               <i class="material-icons">power_settings_new</i>
               <p>
                 <span class="d-lg-none d-md-block">Logout</span>
