--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
     <div class="user-info">
       <a data-toggle="collapse" href="#collapseExample" class="collapsed">
         <span>
-          User Name
+          {{userName}}
           <b class="caret"></b>
         </span>
       </a>
@@ -47,8 +47,8 @@
       </div>
     </div>
   </div>
-  <div *ngIf="isMobileMenu()">
-    <form class="navbar-form">
+    <!-- <div *ngIf="isMobileMenu()">
+   <form class="navbar-form">
       <span class="bmd-form-group">
         <div class="input-group no-border">
           <input type="text" value="" class="form-control" placeholder="Search...">
@@ -85,16 +85,9 @@
           <a class="dropdown-item" href="#">Another One</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#pablo">
-          <i class="material-icons">person</i>
-          <p>
-            <span class="d-lg-none d-md-block">Account</span>
-          </p>
-        </a>
-      </li>
+
     </ul>
-  </div>
+  </div>  -->
   <ul class="nav">
     <li routerLinkActive="active" *ngFor="let menuitem of menuItems" class="nav-item">
       <!--If is a single link-->
@@ -121,7 +114,14 @@
         </ul>
       </div>
     </li>
-
+    <li class="nav-item d-lg-none">
+      <a class="nav-link" href="#" (click)="logout()">
+        <i class="material-icons">power_settings_new</i>
+        <p>
+          <span class="d-lg-none d-md-block">Logout</span>
+        </p>
+      </a>
+    </li>
   </ul>
 
 </div>
