--- a/src/app/site/patient-list/patient-list.component.html
+++ b/src/app/site/patient-list/patient-list.component.html
@@ -25,17 +25,17 @@
                   </thead>
                   <tbody>
                     <tr *ngFor="let patient of patients">
-                      <td>{{getRefNumber(patient.pat_id)}}</td>
+                      <td>{{getRefNumber(patient.pat_id, patient.prefix)}}</td>
                       <td>{{patient.initials}}</td>
                       <td>{{patient.dob | date}}</td>
                       <td>{{patient.icf_date | date}}</td>
                       <td class="td-actions text-right">
-                        <button mat-raised-button type="button" class="btn btn-info ">
+                        <a mat-raised-button type="button" class="btn btn-info ">
                           <i class="material-icons">person</i>
-                      </button>
-                      <button mat-raised-button type="button" class="btn btn-success ">
+                        </a>
+                      <a href="/site/patient/{{patient._id}}" mat-raised-button type="button" class="btn btn-success " >
                           <i class="material-icons">edit</i>
-                      </button>
+                      </a>
                       <button mat-raised-button type="button" class="btn btn-danger">
                           <i class="material-icons">close</i>
                       </button>
