--- a/src/app/admin/crf-detail/crf-detail.component.html
+++ b/src/app/admin/crf-detail/crf-detail.component.html
@@ -50,11 +50,11 @@
                     <div class="col-md-4">
                       <mat-form-field>
                         <mat-select placeholder="Choose Field Type" formControlName="field_type" (selectionChange)="onFieldTypeChange($event)">
-                          <mat-option value="textfield">Text Field</mat-option>
+                          <mat-option value="input">Text Field</mat-option>
                           <mat-option value="checkbox">Checkbox</mat-option>
-                          <mat-option value="radio">Radio</mat-option>
+                          <mat-option value="radiobutton">Radio</mat-option>
                           <mat-option value="select">Dropdown</mat-option>
-                          <mat-option value="Date">Date Field</mat-option>
+                          <mat-option value="date">Date Field</mat-option>
                           <mat-option value="unit">Unit Field</mat-option>
                         </mat-select>
                       </mat-form-field>
