--- a/src/app/site/patient-create/patient-create.component.html
+++ b/src/app/site/patient-create/patient-create.component.html
@@ -17,7 +17,7 @@
                 <div class="col-md-5 mr-auto" [ngClass]="displayFieldCss(frmRegister, 'initials')">
                   <mat-form-field class="example-full-width">
                     <input matInput placeholder="Initials" formControlName="initials" type="text" required />
-                    <app-field-error-display [displayError]="isFieldValid(frmRegister, 'initials')" errorMsg="Enter a valid Initials (e.g FML, F_L)" ></app-field-error-display>
+                    <app-field-error-display [displayError]="isFieldValid(frmRegister, 'initials')" errorMsg="Enter a valid Initials (e.g FML, F-L)" ></app-field-error-display>
                   </mat-form-field>
                 </div>
                 <div class="col-md-5 mr-auto" [ngClass]="displayFieldCss(frmRegister, 'dob')">
