--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -26,17 +26,17 @@
       <div class="collapse" id="collapseExample">
         <ul class="nav">
           <li class="nav-item">
-            <a href="javascript:void(0)" class="nav-link">
+            <a href="/site/profile" class="nav-link">
               <span class="sidebar-mini">MP</span>
               <span class="sidebar-normal">My Profile</span>
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a href="javascript:void(0)" class="nav-link">
               <span class="sidebar-mini">EP</span>
               <span class="sidebar-normal">Edit Profile</span>
             </a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a href="javascript:void(0)" class="nav-link">
               <span class="sidebar-mini">S</span>
