--- a/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -19,7 +19,7 @@
     <div class="user-info">
       <a data-toggle="collapse" href="#collapseExample" class="collapsed">
         <span>
-          User Name
+          {{user.first_name}} {{user.last_name}}
           <b class="caret"></b>
         </span>
       </a>
